objects/UNITY_Vendor_Assignment__c.object
<CustomObject>
    <description>UNITY project - Cache and Log vendor assignment for work orders.</description>
    <fields>
        <fullName>Assignment_Warning__c</fullName>
        <label>Assignment Warning</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Assignments (Account)</relationshipLabel>
        <relationshipName>Vendor_Rankings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Initial_PO_Cost__c</fullName>
        <formula>Initial_PO__r.UNITY_Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial PO Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial PO</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Vendor Assignments</relationshipLabel>
        <relationshipName>Vendor_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Assigned__c</fullName>
        <label>Last Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OON__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PIN__c</fullName>
        <description>4 Digit PIN# that&apos;s randomly assigned to vendor assignment record at creation</description>
        <label>PIN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Request</fullName>
                </value>
                <value>
                    <fullName>Preventive Maintenance</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Site Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Rejected-No Response</fullName>
                </value>
                <value>
                    <fullName>Rejected-Other</fullName>
                </value>
                <value>
                    <fullName>Candidate</fullName>
                </value>
                <value>
                    <fullName>Candidate-Off Hours</fullName>
                </value>
                <value>
                    <fullName>Candidate-Below Margin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade</label>
        <referenceTo>FSO__Skill__c</referenceTo>
        <relationshipLabel>Vendor Assignments</relationshipLabel>
        <relationshipName>Vendor_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2 Hour Response</fullName>
                </value>
                <value>
                    <fullName>4 Hour Response</fullName>
                </value>
                <value>
                    <fullName>12 Hour Response</fullName>
                </value>
                <value>
                    <fullName>24 Hour Response</fullName>
                </value>
                <value>
                    <fullName>48 Hour Response</fullName>
                </value>
                <value>
                    <fullName>72 Hour Response</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Planned Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_1__c</fullName>
        <formula>IF (ISPICKVAL(UNITY_Priority__c, &apos;2 Hour Response&apos;) || ISPICKVAL(UNITY_Priority__c, &apos;4 Hour Response&apos;),
 CASE( Status__c, &apos;Rejected-No Response&apos;, 0, 
       &apos;Accepted&apos;, 1,
       &apos;Rejected&apos;, 1,
       &apos;Rejected-Other&apos;, 1,
       NULL),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Factor 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_2__c</fullName>
        <formula>IF (!(ISPICKVAL(UNITY_Priority__c, &apos;2 Hour Response&apos;) || ISPICKVAL(UNITY_Priority__c, &apos;4 Hour Response&apos;)),
 CASE( Status__c, &apos;Rejected-No Response&apos;, 0, 
       &apos;Accepted&apos;, 1,
       &apos;Rejected&apos;, 1,
       &apos;Rejected-Other&apos;, 1,
       NULL),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Factor 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Vendor_Email__c</fullName>
        <label>Vendor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Assignments (Account)</relationshipLabel>
        <relationshipName>Vendor_Rankings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Vendor Assignments</relationshipLabel>
        <relationshipName>Vendor_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vendor Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VA-{0000000}</displayFormat>
        <label>Vendor Assigment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>